--- a/templates/search/index.html.twig
+++ b/templates/search/index.html.twig
@@ -119,11 +119,8 @@
                         <div class="modal-body">
                             <div class="modal-container-border text-center">
                                 <div class="row form-container">
-                                    <div class="col-10">
+                                    <div class="col-12">
                                         <input type="text" class="form-control" id="search-tag" placeholder="Search tags" aria-label="Search tags"/>
-                                    </div>
-                                    <div class="col-2">
-                                        <button type="submit" class="btn btn-danger" id="search-tag-btn">Rechercher</button>
                                     </div>
                                 </div>
                                 <div class="col-12 tag-container row">
@@ -136,7 +133,7 @@
                                                 <div class="tag-user-tags row">
                                                     {% for i in 0..20 %}
                                                         <div class="col-4 tags-wrap">
-                                                            <div class="tag m-1">
+                                                            <div class="tag m-2">
                                                                 tag U.{{i}}
                                                             </div>
                                                         </div>
@@ -145,7 +142,7 @@
                                             </div>
                                             {# hide this div if their is tags in the search response #}
                                             <div class="tag-container-footer">
-                                                <button type="button" class="btn btn-danger">Ajouter le tag</button>
+                                                <button type="button" class="btn btn-danger">Créer le tag</button>
                                             </div>
                                         </div>
                                     </div>
@@ -157,7 +154,7 @@
                                             <div class="tag-video-tags row">
                                                 {% for i in 0..4 %}
                                                     <div class="col-4 tags-wrap">
-                                                        <div class="tag m-1 ">
+                                                        <div class="tag m-2">
                                                             tag V.{{i}}
                                                         </div>
                                                     </div>
