--- a/templates/search/index.html.twig
+++ b/templates/search/index.html.twig
@@ -91,7 +91,7 @@
             
             <label for="flexCheckDefault" class="form-label">Save</label>
             <div class="col-sm-7 col-md-12" style="text-align: start">
-                {{ form_widget(filterForm.wantSave) }}
+                {#{{ form_widget(filterForm.wantSave) }}#}button save
             </div>
         </div>
 
@@ -103,75 +103,77 @@
         <h3>RESULTATS</h3>
         <div class="under_title"></div>
 
-        <div class="row justify-content-between container-button">
+        {% if data is defined %}
+            <div class="row justify-content-between container-button">
 
-            <div class="col-sm-7 col-md-3">
-                <label for="check" class="form-label" style="margin-top:10%">Select all</label>
-                <div class="form-check">
-                    <input class="form-check-input" id="check" type="checkbox" value="" id="flexCheckDefault">
+                <div class="col-sm-7 col-md-3">
+                    <label for="check" class="form-label" style="margin-top:10%">Select all</label>
+                    <div class="form-check">
+                        <input class="form-check-input" id="check" type="checkbox" value="" id="flexCheckDefault">
+                    </div>
                 </div>
-            </div>
 
-        <!-- Modal -->
-            <div class="modal fade" id="tagsModal" tabindex="-1" aria-labelledby="tagsModalLabel" aria-hidden="true">
-                <div class="modal-dialog modal-lg modal-center">
-                    <div class="modal-content modal-rounded p-2 modal-tag">
-                        <div class="modal-body">
-                            <div class="modal-container-border text-center">
-                                <div class="row form-container">
-                                    <div class="col-10">
-                                        <input type="text" class="form-control" id="search-tag" placeholder="Search tags" aria-label="Search tags"/>
-                                    </div>
-                                    <div class="col-2">
-                                        <button type="submit" class="btn btn-danger" id="search-tag-btn">Rechercher</button>
-                                    </div>
-                                </div>
-                                <div class="col-12 tag-container row">
-                                    <div class="col-5">
-                                        <div class="tag-user">
-                                            <div class="tag-user-title">
-                                                Tags User   
-                                            </div>
-                                            <div class="tag-user-tags row">
-                                                {% for i in 0..5 %}
-                                                    <div class="col-4">
-                                                        <div class="tag m-1 ">
-                                                            tag U.{{i}}
-                                                        </div>
-                                                    </div>
-                                                {% endfor %}
-                                            </div>
+            <!-- Modal -->
+                <div class="modal fade" id="tagsModal" tabindex="-1" aria-labelledby="tagsModalLabel" aria-hidden="true">
+                    <div class="modal-dialog modal-lg modal-center">
+                        <div class="modal-content modal-rounded p-2 modal-tag">
+                            <div class="modal-body">
+                                <div class="modal-container-border text-center">
+                                    <div class="row form-container">
+                                        <div class="col-10">
+                                            <input type="text" class="form-control" id="search-tag" placeholder="Search tags" aria-label="Search tags"/>
+                                        </div>
+                                        <div class="col-2">
+                                            <button type="submit" class="btn btn-danger" id="search-tag-btn">Rechercher</button>
                                         </div>
                                     </div>
-                                    <div class="col-5 tag-video-contaier">
-                                        <div class="tag-video">
-                                            <div class="tag-video-title">
-                                                Tags Video   
-                                            </div>
-                                            <div class="tag-video-tags row">
-                                                {% for i in 0..4 %}
-                                                    <div class="col-4">
-                                                        <div class="tag m-1 ">
-                                                            tag V.{{i}}
+                                    <div class="col-12 tag-container row">
+                                        <div class="col-5">
+                                            <div class="tag-user">
+                                                <div class="tag-user-title">
+                                                    Tags User   
+                                                </div>
+                                                <div class="tag-user-tags row">
+                                                    {% for i in 0..5 %}
+                                                        <div class="col-4">
+                                                            <div class="tag m-1 ">
+                                                                tag U.{{i}}
+                                                            </div>
                                                         </div>
-                                                    </div>
-                                                {% endfor %}   
+                                                    {% endfor %}
+                                                </div>
                                             </div>
                                         </div>
-                                    </div>
-                                    <div class="col-2 tag-video-contaier">
-                                        <div class="tag-recap">
-                                            <div class="tag-recap-title">
-                                                Recap   
-                                            </div>
-                                            <div class="tag-recap-tags row">
-                                                {% for i in 0..4 %}
-                                                    <div class="col-12">
-                                                        <div class="tag m-2">
-                                                            tag {{i}}
+                                        <div class="col-5 tag-video-contaier">
+                                            <div class="tag-video">
+                                                <div class="tag-video-title">
+                                                    Tags Video   
+                                                </div>
+                                                <div class="tag-video-tags row">
+                                                    {% for i in 0..4 %}
+                                                        <div class="col-4">
+                                                            <div class="tag m-1 ">
+                                                                tag V.{{i}}
+                                                            </div>
                                                         </div>
-                                                    </div>
-                                                {% endfor %}   
+                                                    {% endfor %}   
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-2 tag-video-contaier">
+                                            <div class="tag-recap">
+                                                <div class="tag-recap-title">
+                                                    Recap   
+                                                </div>
+                                                <div class="tag-recap-tags row">
+                                                    {% for i in 0..4 %}
+                                                        <div class="col-12">
+                                                            <div class="tag m-2">
+                                                                tag {{i}}
+                                                            </div>
+                                                        </div>
+                                                    {% endfor %}   
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
@@ -180,80 +182,83 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="col-sm-7 col-md-3" >
+                    <a class="text-light btn btn-danger" type="button" data-bs-toggle="modal" data-bs-target="#tagsModal"><u>Ajouter tags</u></a>
+                </div>
+
+                <div class="col-sm-7 col-md-3" >
+                    <button type="button" class="btn btn-danger button">Voir les statistiques</button>
+                </div>
+                <div class="col-sm-7 col-md-3" >
+                    <button type="button" class="btn btn-danger button">Extraire les données</button>
+                </div>
+
+                
             </div>
 
-            <div class="col-sm-7 col-md-3" >
-                <a class="text-light btn btn-danger" type="button" data-bs-toggle="modal" data-bs-target="#tagsModal"><u>Ajouter tags</u></a>
+            <div class="container">
+
+                <table class="table" style="margin-top:5%">
+                    <tbody>
+                        {% for video in data %}
+                            <tr>
+                                <th scope="row">
+                                    <div class="form-check" >
+                                        <input class="form-check-video-res" type="checkbox" id="flexCheckDefault">
+                                    </div>
+                                </th>
+                                <td>
+                                    <img src="assets\images\exthumbnailjpg.jpg" alt="Bootstrap" class="img-thumbnail">
+                                </td>
+                                <td>
+                                    <div class="title">
+                                        {{ video.title}}<br/>
+                                    </div> 
+                                    {{ video.description[:100] ~ '...'}}
+                                    <div class=" row" >
+                                        {% for tag in video.tags %}
+                                                <div class="tag col-2" >
+                                                    {{tag.name}}
+                                                </div>
+                                        {% endfor %}
+                                    </div> 
+                                </td>
+                                <td>
+                                    Nb vues
+                                    <div class="numbers">
+                                        {{ video.statistic.nbViews}}
+                                    </div>
+                                </td>
+                                <td>
+                                    Nb likes
+                                    <div class="numbers">
+                                        {{ video.statistic.nbLikes}}
+                                    </div>
+                                </td>
+                                <td>
+                                    Date d'upload
+                                    <div class="numbers">
+                                        {{ video.statistic.releaseDate | date('d-m-Y')}}
+                                    </div>
+                                </td>
+                            </tr>
+                            {% endfor %}
+                        
+                    </tbody>
+                </table>
+
+                <div class="pagination">
+                    1-2345
+                </div>
+
+
             </div>
-
-            <div class="col-sm-7 col-md-3" >
-                <button type="button" class="btn btn-danger button">Voir les statistiques</button>
-            </div>
-            <div class="col-sm-7 col-md-3" >
-                <button type="button" class="btn btn-danger button">Extraire les données</button>
-            </div>
-
-            
-        </div>
-
-        <div class="container">
-
-            <table class="table" style="margin-top:5%">
-                <tbody>
-                {% if data is defined %}
-                    {% for video in data %}
-                        <tr>
-                            <th scope="row">
-                                <div class="form-check" >
-                                    <input class="form-check-video-res" type="checkbox" id="flexCheckDefault">
-                                </div>
-                            </th>
-                            <td>
-                                <img src="assets\images\exthumbnailjpg.jpg" alt="Bootstrap" class="img-thumbnail">
-                            </td>
-                            <td>
-                                <div class="title">
-                                    {{ video.title}}<br/>
-                                </div> 
-                                {{ video.description}}
-                                <div class=" row" >
-                                    {% for tag in video.tags %}
-                                            <div class="tag col-2" >
-                                                {{tag.name}}
-                                            </div>
-                                    {% endfor %}
-                                </div> 
-                            </td>
-                            <td>
-                                Nb vues
-                                <div class="numbers">
-                                    {{ video.statistic.nbViews}}
-                                </div>
-                            </td>
-                            <td>
-                                Nb likes
-                                <div class="numbers">
-                                    {{ video.statistic.nbLikes}}
-                                </div>
-                            </td>
-                            <td>
-                                Date d'upload
-                                <div class="numbers">
-                                    {{ video.statistic.releaseDate | date('d-m-Y')}}
-                                </div>
-                            </td>
-                        </tr>
-                        {% endfor %}
-                    {% endif %}
-                </tbody>
-            </table>
-
-            <div class="pagination">
-                1-2345
-            </div>
-
-
-        </div>
+        {% else %}
+        <p>
+            Pas de vidéos disponibles
+        </p>
+        {% endif %}
 
 
     </div> 
