--- a/templates/search/index.html.twig
+++ b/templates/search/index.html.twig
@@ -120,7 +120,7 @@
                             <div class="modal-container-border text-center">
                                 <div class="row form-container">
                                     <div class="col-12">
-                                        <input type="text" class="form-control" id="search-tag" placeholder="Search tags" aria-label="Search tags"/>
+                                        <input type="text" class="form-control" id="search-tag" name="search-tag" placeholder="Search tags" aria-label="Search tags"/>
                                     </div>
                                 </div>
                                 <div class="col-12 tag-container row">
