Tags working web services

--- a/templates/search/index.html.twig
+++ b/templates/search/index.html.twig
@@ -218,14 +218,8 @@
                                             <div class="tag-video-title">
                                                 Tags Video   
                                             </div>
-                                            <div class="tag-video-tags row">
-                                                {% for i in 0..4 %}
-                                                    <div class="col-4 tags-wrap">
-                                                        <div class="tag m-2">
-                                                            tag V.{{i}}
-                                                        </div>
-                                                    </div>
-                                                {% endfor %}   
+                                            <div class="tag-video-tags row" id="tag-user" name="tag-user">
+                                                 
                                             </div>
                                         </div>
                                     </div>
