Tag jquery OK reste le recap a gérer + submit

--- a/templates/search/index.html.twig
+++ b/templates/search/index.html.twig
@@ -218,7 +218,7 @@
                                             <div class="tag-video-title">
                                                 Tags Video   
                                             </div>
-                                            <div class="tag-video-tags row" id="tag-user" name="tag-user">
+                                            <div class="tag-video-tags row" id="tag-video" name="tag-video">
                                                  
                                             </div>
                                         </div>
