--- a/templates/stats/statsGlobale.html.twig
+++ b/templates/stats/statsGlobale.html.twig
@@ -1,16 +1,22 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello StatsController!{% endblock %}
+{% block title %}Statistiques des vidéos choisies!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
 <div class="example-wrapper">
-    
-  
-
+    <canvas id="myChart" width="400" height="400"></canvas>
 </div>
+{% endblock %}
+
+
+
+{% block stylesheets %}
+    {{ parent() }}
+    {{ encore_entry_link_tags('stats') }}
+{% endblock %}
+
+{% block javascripts %}
+    {{ parent() }}
+    {{ encore_entry_script_tags('stats') }}
 {% endblock %}
