--- a/templates/menu/index.html.twig
+++ b/templates/menu/index.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Insertion des vidéos!{% endblock %}
-
+{% block pageTitle %}Import de vidéos{% endblock %}
 {% block body %}
 
 <!-- Modal -->
