--- a/templates/menu/index.html.twig
+++ b/templates/menu/index.html.twig
@@ -35,7 +35,7 @@
 
 
     {{ form_start(URLform) }}
-        <div class="container input-center">
+        <div class="container input-center" style="margin-top: 10%">
             <div class="center">
                 <div class="input-group mb-3">
                     {{ form_widget(URLform.unique_link, {'attr': {'class': 'form-control border-radius-input'}}) }}
