--- a/assets/styles/stats.css
+++ b/assets/styles/stats.css
@@ -13,3 +13,44 @@ canvas {
     background: white;
     height: 400px;
 }
+
+.container-graph{
+    background-color: white;
+    /*border: solid red;*/
+    width: 45%;
+    padding: 1% 2% 1% 2%;
+    border-radius: 30px;
+}
+
+.graph-resume{
+    background-color: #EE4145;
+}
+
+.title-part-graph{
+    text-align: center;
+    color: white;
+    text-transform: uppercase;
+    /*margin: 2% 0 3% 0;*/
+    letter-spacing: 3px;font-style: normal!important;
+}
+
+.under_title {
+    width: 70px;
+    height: 2px;
+    background-color: #EE4145;
+    margin: 0 auto;
+}
+
+.container-main{
+    margin: 3% 0 5% 0;
+}
+
+.graph-resume-libelle{
+    padding: 5%;
+}
+
+.graph-resume-libelle p {
+    text-transform: uppercase;
+    font-weight: bold;
+    color: white;
+}
