rajout d'une fonction et refacto d'un peu de code

--- a/templates/stats/statsGlobale.html.twig
+++ b/templates/stats/statsGlobale.html.twig
@@ -7,10 +7,10 @@
 
 
     <div class="container">
-        <a href="{{ path('get_graph_json_data', {stringParam : stringParam}) }}" class="btn btn-danger get-json-data mx-auto">Charger les données</a>
-
+        <a href="{{ path('get_graph_json_data', {stringParam : stringParam}) }}" class="btn btn-danger get-json-data mx-auto">Charger les données (graph 1 et 2)</a>
+        <a href="{{ path('get_info_from_search', {stringParam : stringParam}) }}" class="btn btn-danger get-info-from-search mx-auto">Charger les données (compteur videos)</a>
         <div class="title-part-graph" style="margin-top: 2%">
-            <h3 class="">Statistiques globaux</h3>
+            <h3 class="">Statistiques globales</h3>
             <div class="under_title"></div>
         </div>
 
