--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,8 +2,8 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Youtube Catalogue</title>
-
+    <title>{% block title %}Youtube Catalogue{% endblock %}</title>
+    <link rel="icon" type="image/png" href="{{ asset('images/favicon.jpg') }}" />
     {% block stylesheets %}
         {{ encore_entry_link_tags('app') }}
     {% endblock %}
@@ -14,13 +14,14 @@
 </head>
 <body>
 <div class="nav-bar text-light">
+    <img src="{{ asset('images/banniere.png') }}" alt="banniere" class="img-banniere">
     <div class="h1">
         <b><a class="main-title" href="{{path('app_main')}}">Youtube Catalogue</a></b>
     </div>
     <div class="h2 flex">
-        <b><a class="main-title" href="{{path('app_search')}}">Catalogue</a></b>
+        <b><a class="second-main-title" href="{{path('app_search')}}">Catalogue</a></b>
         <b>	&bull;</b>
-        <b><a class="main-title" href="{{path('app_main')}}">Import</a></b>
+        <b><a class="second-main-title" href="{{path('app_main')}}">Import</a></b>
         {#                    <b class="px-1">{% block pageTitle %}{% endblock %}</b>#}
     </div>
 
