create video/id page and template

--- a/assets/styles/search.css
+++ b/assets/styles/search.css
@@ -15,6 +15,10 @@
     text-align: center;
 }
 
+.row-video:hover {
+    background-color: #e5e5e5b0;
+}
+
 .modal-tag {
     background-color: rgb(32, 33, 49);
 }
