--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,12 +16,12 @@
 <div class="nav-bar text-light">
     <img src="{{ asset('images/banniere.png') }}" alt="banniere" class="img-banniere">
     <div class="h1">
-        <b><a class="main-title" href="{{path('app_main')}}">Youtube Catalogue</a></b>
+        <b><a class="main-title fw-bold" href="{{path('app_main')}}">Youtube Catalogue</a></b>
     </div>
     <div class="h2 flex">
-        <b><a class="second-main-title" href="{{path('app_search')}}">Catalogue</a></b>
+        <b><a class="second-main-title fw-bold" href="{{path('app_search')}}">Catalogue</a></b>
         <b>	&bull;</b>
-        <b><a class="second-main-title" href="{{path('app_main')}}">Import</a></b>
+        <b><a class="second-main-title fw-bold" href="{{path('app_main')}}">Import</a></b>
         {#                    <b class="px-1">{% block pageTitle %}{% endblock %}</b>#}
     </div>
 
