--- a/templates/search/index.html.twig
+++ b/templates/search/index.html.twig
@@ -42,7 +42,7 @@
 
             <div class="col-5">
                 <label for="upload_date" class="form-label">Date d'upload</label>
-                <div class="double-input" id="upload_date" data-provide="datepicker">
+                <div class="double-input" id="upload_date">
                     {{ form_widget(filterForm.min_uploadDate) }}
                     <p class="inter-input">à</p>
                     {{ form_widget(filterForm.max_uploadDate) }}
