--- a/templates/video/index.html.twig
+++ b/templates/video/index.html.twig
@@ -3,24 +3,78 @@
 {% block title %}Hello VideoController!{% endblock %}
 
 {% block body %}
+$("body").children().first().before($(".modal"));
+<div class="container-main ">
+    <h3 class="fw-bold">{{ video.title }} </h3>
+    <div class="under_title"></div>
 
-<div class="container text-light">
-    <h1>{{ video.title }} ✅</h1>
-    <div class="row">
-        <div class="col-md-4">
-            <img src="{{ video.thumbnail }}" alt="" width="400" height="300">
-            <p>Nombre de vues : {{ video.statistic.nbViews }}</p>
-            <p>Nombre de likes : {{ video.statistic.nbLikes }}</p>
+    <div class="row" style="margin-top:5%">
+        <div class="col-md-5">
+            <div class="span4 proj-div" onClick="open('GSCCModal');">
+                <img src="{{ video.thumbnail }}" alt="" width="400" height="300">
+                {# <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                Launch demo modal
+                </button>             #}
+            </div>
         </div>
-        <div class="col-md-8">
+
+        <div class="col-md-6">
             <p>Description : {{ video.description }}</p>
             <p>Catégorie : {{ video.category.name }}</p>
             <p>Date de sortie : {{ video.statistic.releaseDate|date('d/m/Y') }}</p>
             <p>Durée : {{ video.statistic.duration }}</p>
+            <p>Nombre de vues : {{ video.statistic.nbViews }}</p>
+            <p>Nombre de likes : {{ video.statistic.nbLikes }}</p>
         </div>
     </div>
+
     <div class="row my-1">
         <iframe width="420" height="500" src="https://www.youtube.com/embed/{{ video.url }}"></iframe>
     </div>
 </div>
+
+
+{# Modal #}
+{# <div id="GSCCModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"> #}
+{# <div class="modal fade" id="videoModal" tabindex="-1" aria-labelledby="tagsModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg modal-center">
+        <div class="modal-content modal-rounded p-2 modal-tag">
+            <div class="modal-body">
+                 <div class="modal-container-border text-center">
+                    <iframe width="420" height="500" src="https://www.youtube.com/embed/{{ video.url }}"></iframe>
+                 </div>
+            </div>
+         </div>
+    </div>
+</div> #}
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" >
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+{# End modal #}
 {% endblock %}
+
+
+    {% block stylesheets %}
+        {{ parent() }}
+        {{ encore_entry_link_tags('search') }}
+    {% endblock %}
+
+    {% block javascripts %}
+        {{ parent() }}
+        {{ encore_entry_script_tags('video') }}
+    {% endblock %}
