--- a/templates/search/index.html.twig
+++ b/templates/search/index.html.twig
@@ -73,7 +73,65 @@
     </div>
     {{form_end(filterForm)}}
 </div><!-- end container-main -->
+            <a class="text-light btn btn-danger mt-1" type="button" data-bs-toggle="modal" data-bs-target="#tagsModal">Ajouter tags</a>
+<!-- Modal -->
+        <div class="modal fade" id="tagsModal" tabindex="-1" aria-labelledby="tagsModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-lg modal-center">
+                <div class="modal-content modal-rounded p-2 modal-tag">
+                    <div class="modal-body">
+                        <div class="modal-container-border text-center">
+                            <div class="row form-container">
+                                <div class="col-12">
+                                    <input type="text" class="form-control" id="search-tag" name="search-tag" placeholder="Search tags" aria-label="Search tags"/>
+                                </div>
+                            </div>
+                            <div class="col-12 tag-container row">
+                                <div class="col-5 tag-user-container">
+                                    <div class="tag-user">
+                                        <div class="tag-user-title">
+                                            Tags User
+                                        </div>
+                                        <div class="tag-container-body">
+                                            <div class="tag-user-tags row" id="tag-user" name="tag-user">
 
+                                            </div>
+                                        </div>
+                                        <div class="tag-container-footer">
+                                            <button type="button" class="btn btn-danger" id="create-tag" style="display: none;">Créer le tag</button>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-5 tag-video-container">
+                                    <div class="tag-video">
+                                        <div class="tag-video-title">
+                                            Tags Video   
+                                        </div>
+                                        <div class="tag-video-tags row" id="tag-video" name="tag-video">
+                                                
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-2 tag-recap-container">
+                                    <div class="tag-recap">
+                                        <div class="tag-recap-title">
+                                            Recap
+                                        </div>
+                                        <div class="tag-container-body">
+                                            <div class="tag-recap-tags row" id="tag-recap" name="tag-recap">
+
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="m-2">
+                                <button type="button" class="btn btn-danger" data-dismiss="modal" id="submit-tags">Appliquer les tags</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div> <!-- endmodal -->
 {% if data is defined %}
 <div class="container-main mt-3">
     <h3>RESULTATS</h3>
@@ -157,72 +215,7 @@
         </div><!-- end container -->
     
 
-        <!-- Modal -->
-        <div class="modal fade" id="tagsModal" tabindex="-1" aria-labelledby="tagsModalLabel" aria-hidden="true">
-            <div class="modal-dialog modal-lg modal-center">
-                <div class="modal-content modal-rounded p-2 modal-tag">
-                    <div class="modal-body">
-                        <div class="modal-container-border text-center">
-                            <div class="row form-container">
-                                <div class="col-12">
-                                    <input type="text" class="form-control" id="search-tag" name="search-tag" placeholder="Search tags" aria-label="Search tags"/>
-                                </div>
-                            </div>
-                            <div class="col-12 tag-container row">
-                                <div class="col-5 tag-user-container">
-                                    <div class="tag-user">
-                                        <div class="tag-user-title">
-                                            Tags User
-                                        </div>
-                                        <div class="tag-container-body">
-                                            <div class="tag-user-tags row" id="tag-user" name="tag-user">
-
-                                            </div>
-                                        </div>
-                                        {# hide this div if their is tags in the search response #}
-                                        <div class="tag-container-footer">
-                                            <button type="button" class="btn btn-danger">Créer le tag</button>
-                                        </div>
-                                    </div>
-                                    <div class="col-5 tag-video-container">
-                                        <div class="tag-video">
-                                            <div class="tag-video-title">
-                                                Tags Video   
-                                            </div>
-                                            <div class="tag-video-tags row" id="tag-video" name="tag-video">
-                                                 
-                                            </div>
-                                        </div>
-                                        <div class="tag-video-tags row" id="tag-user" name="tag-user">
-
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-2 tag-recap-container">
-                                    <div class="tag-recap">
-                                        <div class="tag-recap-title">
-                                            Recap
-                                        </div>
-                                        <div class="tag-recap-tags row">
-                                            {% for i in 0..4 %}
-                                                <div class="col-12">
-                                                    <div class="tag m-2">
-                                                        tag {{i}}
-                                                    </div>
-                                                </div>
-                                            {% endfor %}
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="m-2">
-                                <button type="button" class="btn btn-danger" data-dismiss="modal">Appliquer les tags</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div> <!-- endmodal -->
+        
     </div><!-- end row -->
 </div><!-- end container -->
 {% endif %}
