--- a/templates/video/index.html.twig
+++ b/templates/video/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Hello VideoController!{% endblock %}
 
 {% block body %}
-$("body").children().first().before($(".modal"));
+{# $("body").children().first().before($(".modal")); #}
 <div class="container-main ">
     <h3 class="fw-bold">{{ video.title }} </h3>
     <div class="under_title"></div>
@@ -12,9 +12,11 @@ $("body").children().first().before($(".modal"));
         <div class="col-md-5">
             <div class="span4 proj-div" onClick="open('GSCCModal');">
                 <img src="{{ video.thumbnail }}" alt="" width="400" height="300">
-                {# <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                {# <button type="button" class="btn btn-primary" id="exampleModal">
                 Launch demo modal
-                </button>             #}
+                </button>   #}
+                <button id="myBtn">Open Modal</button>
+                <a class="text-light btn btn-danger mt-1" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">Ajouter tags</a>           
             </div>
         </div>
 
@@ -28,9 +30,9 @@ $("body").children().first().before($(".modal"));
         </div>
     </div>
 
-    <div class="row my-1">
+    {# <div class="row my-1">
         <iframe width="420" height="500" src="https://www.youtube.com/embed/{{ video.url }}"></iframe>
-    </div>
+    </div> #}
 </div>
 
 
@@ -48,7 +50,7 @@ $("body").children().first().before($(".modal"));
     </div>
 </div> #}
 <!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" >
+{# <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" >
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
@@ -64,17 +66,28 @@ $("body").children().first().before($(".modal"));
       </div>
     </div>
   </div>
+</div> #}
+
+
+<div id="myModal" class="modal">
+
+  <!-- Modal content -->
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <p>Some text in the Modal..</p>
+  </div>
+
 </div>
 {# End modal #}
 {% endblock %}
 
-
+{# 
     {% block stylesheets %}
         {{ parent() }}
-        {{ encore_entry_link_tags('search') }}
+        {{ encore_entry_link_tags('video') }}
     {% endblock %}
 
     {% block javascripts %}
         {{ parent() }}
         {{ encore_entry_script_tags('video') }}
-    {% endblock %}
+    {% endblock %} #}
